tests/paczka1/small_fuzzy/84784870.err
Error in line 3: 8ut5Vwp S464 0,1
Error in line 11: S464 S711 235,9
Error in line 13: S464 S464 28,3
